--- a/public/404.html
+++ b/public/404.html
@@ -71,7 +71,7 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/assets/bootstrap.min-eefe6f4ee317ad10ec7b7f3d8528757498ce6b048455ffe04f7df911a849b032.css" data-turbo-track="reload">
+  <link rel="stylesheet" href="/assets/bootstrap.min.css" data-turbo-track="reload">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&amp;display=swap">
   <style>
     .page_404{
